--- a/YelpCamp/views/new.ejs
+++ b/YelpCamp/views/new.ejs
@@ -1,11 +1,36 @@
 <%- include("partials/header") %>
-<h1>Create New Campgrouds</h1>
 
-<form action="/campgrounds" method="POST">
-	<input type="text" name="name" placeholder="name">
-	<input type="text" name="image" placeholder="image url">
-	<button>Submit!</button>
+<div class="container">
+	<h1 style="text-align: center">Create New Campgrouds</h1>
+	
+	<div class="row">
+			
+	
+	<div style="width: 40%; margin: 25px auto">
+	
+	<form action="/campgrounds" method="POST">
+		<div class="form-group">
+			<input class="form-control" type="text" name="name" placeholder="name">
+			
+		</div>
 
-</form>
-<a href="/campgrounds">Go Back</a>
+		<div class="form-group">
+			<input class="form-control" type="text" name="image" placeholder="image url">
+		</div>
+
+		<div class="form-group">
+			<button class="btn btn-lg btn-primary btn-block">Submit!</button>
+		</div>
+
+	</form>
+	<a href="/campgrounds">Go Back</a>
+
+
+	</div>
+
+</div>
+	
+	
+</div>
+
 <%- include("partials/footer") %>
