--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -6,3 +6,22 @@
 </head>
 <body>
 
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand"  href="/">YelpCamp</a>
+			</div>
+
+			<div class="collapse navbar-collapse justify-content-end">
+				<ul class="nav navbar-nav justify-content-end">
+					<li class="nav-item"><a class="nav-link" href="/">Login</a></li>
+					<li class="nav-item"><a class="nav-link" href="/">Sigh up</a></li>
+					<li class="nav-item"><a class="nav-link" href="/">Logout</a></li>
+					
+				</ul>
+				
+			</div>
+		</div>
+	
+	</nav>
+
