--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -19,6 +19,20 @@
 					<h4><a href=""><%=campground.name%></a></h4>
 					<p><%= campground.description %></p>
 					<p><em>Submitted By <%= campground.author.username %></em></p>
+
+
+
+					<% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
+
+						<a class="btn btn-sm btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+						<form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+							<button  class="btn btn-sm btn-danger">Delete</button>
+						</form>
+
+
+					<% } %>
+					
+					
 				</div>
 			</div>
 			<div class="card card-body bg-light">
