--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -49,6 +49,15 @@
 						 <p>
         		   		<%= comment.text %>
     					</p>
+
+
+					<% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+    					<a href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit" class="btn btn-sm btn-warning">Edit</a>
+    					<form class="d-inline" action="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>?_method=DELETE" method = "POST">
+    						<input type="Submit"  class="btn btn-sm btn-danger"  value="Delete" name="">
+    					</form>
+    					
+					<% } %>
 					</div>
 				</div>
    				
