--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -35,3 +35,17 @@
 	
 	</nav>
 
+	<div class="container">
+		<!-- error can be empty  -->
+		<% if(error && error.length > 0){ %>
+		<div class="alert alert-danger" role="alert">
+  			<%= error %>
+		</div>
+		<% } %>
+		<% if(success&& success.length > 0){ %>
+		<div class="alert alert-success" role="alert">
+  			<%= success %>
+		</div>
+		<% } %>
+	</div>
+	
